# pet-protect-frontend

./: .cruft.json  .cz.toml  .mypy.ini  README.md  flake.nix  mkdocs.yml  pyproject.toml  tox.ini
.github/: settings.yml
pet_protect_frontend/: __init__.py
tests/: test_packaging_attribute.py
